--- a/demos/form-validation-2/index.html
+++ b/demos/form-validation-2/index.html
@@ -22,7 +22,7 @@
 
     <h1>Démo : formulaire conditionnel et validation custom</h1>
 
-    <form action="" method="POST">
+    <form novalidate action="" method="POST">
 
         <!-- Ici on a un champ avec validation custom (code_inscription doit valoir 12345) et les select doivent changer (rendu conditionnel en fonction de la spécialité choisie)-->
 
