--- a/demos/guess-my-number/index.html
+++ b/demos/guess-my-number/index.html
@@ -30,7 +30,7 @@
         let guess;
         //Nombre d'essais
         let nb_of_tries = 0;
-        //Nombre max d'essais
+        //Nombre max d'essais (à implémenter)
         // let max = 3;
 
         //Tant que...
@@ -46,7 +46,7 @@
                 //Afficher un message sur une modale
                 alert("Trop grand !")
             }else if( guess < number_to_guess){
-                alert("Trop petitnb_of_tries !");
+                alert("Trop petit !");
             }else{
                 //Concaténation de chaine de caractères : number_to_guess est transformée
                 //en string et concacaténée avec la chaine qui précède +
