--- a/demos/live/2025-05-19/tp-todolist-bases-dom/index.html
+++ b/demos/live/2025-05-19/tp-todolist-bases-dom/index.html
@@ -42,41 +42,40 @@
     <script>
 
 
-        //1. Selectionner l'élément HTML
-        let checkbox = document.querySelector('input[type="checkbox"]#task-1');
-        //2. Ajouter un écouteur d'évènement ('change')
-        const li = document.querySelector('ul li:first-child');
+        // //1. Selectionner l'élément HTML
+        // let checkbox = document.querySelector('input[type="checkbox"]#task-1');
+        // //2. Ajouter un écouteur d'évènement ('change')
+        // const li = document.querySelector('ul li:first-child');
 
-        checkbox.addEventListener('change', function(event){
-                // console.log('Checkbox a changé !!')
-                //Ajouter/retirer la classe à la tache
-                li.classList.toggle('done')
-        });
+        // checkbox.addEventListener('change', function (event) {
+        //     li.classList.toggle('done')
+        // });
 
 
-        //Récupère une référence vers un objet qui représente "le noeud" du bouton
-        let btnAddTask = document.getElementById("add_task");
-        //Enregistrer un écouteur d'évènement (une fonction associée à un évènement)
-        //Dès qu'il y aura un click sur le bouton, la fonction sera executée
-        btnAddTask.addEventListener('click', function (event) {
+        /**
+         * Retourne un élément HTML qui représente
+         * une tache (composant)
+         */
+        function createTaskElement(){
             console.log('Ajouter une tache');
-            //Ajouter une tache à notre todolist
-            //Créer un élément
-            let task = document.createElement('li');
-            //Préparer la tâche (label, etc.)
-            
-            //Récupérer la saisie utilisateur (label de la tache)
-            const input = document.getElementById('task_label');
-            //Initialiser le label de la tache avec
-            task.innerText = input.value;
+        }
+
+
+        function actionAddTask() {
             //Récuperer la liste des tâches
             let tasks = document.getElementById("tasks");
             //Ajouter la tache à la liste (noeud enfant du noeud liste des taches)
             tasks.appendChild(task);
             //Réinitialiser l'input (vider la saisie)
             input.value = "";
+        }
 
-        });
+
+        //Récupère une référence vers un objet qui représente "le noeud" du bouton
+        let btnAddTask = document.getElementById("add_task");
+        //Enregistrer un écouteur d'évènement (une fonction associée à un évènement)
+        //Dès qu'il y aura un click sur le bouton, la fonction sera executée
+        btnAddTask.addEventListener('click', actionAddTask);
 
     </script>
 
