--- a/demos/live/2025-05-19/tp-todolist-bases-dom/index.html
+++ b/demos/live/2025-05-19/tp-todolist-bases-dom/index.html
@@ -86,6 +86,9 @@
             //Incrémenter l'identifiant unique attribué à chaque tache
             taskId++;
 
+            //Insérer la tache dans la liste
+            tasks.appendChild(task);
+
             //Réinitialiser l'input (vider la saisie)
             input.value = "";
         }
