--- a/demos/live/2025-05-19/tp-todolist-bases-dom/index.html
+++ b/demos/live/2025-05-19/tp-todolist-bases-dom/index.html
@@ -62,6 +62,10 @@
                 li.classList.toggle('done')
             });
 
+            //Ajouter un bouton pour supprimer la tache
+            const btnDelete = document.createElement('button');
+            btnDelete.innerText = "Supprimer";
+
             return li;
         }
 
